[gd_scene load_steps=5 format=3 uid="uid://48io4jtiaj5t"]

[ext_resource type="Script" path="res://Scripts/falling_rock.gd" id="1_t6kaa"]
[ext_resource type="Texture2D" uid="uid://bkmf2nacvk4f8" path="res://Assets/Sprites/Interactive/stalamit2.png" id="2_b6gbf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8exj8"]
size = Vector2(126, 462)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y3m7w"]
size = Vector2(68, 192)

[node name="FallingRock" type="Node2D" groups=["FallingRock"]]
script = ExtResource("1_t6kaa")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(4, 29)
scale = Vector2(4, 4)
texture = ExtResource("2_b6gbf")

[node name="TriggerArea" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerArea"]
position = Vector2(0, 168)
shape = SubResource("RectangleShape2D_8exj8")

[node name="Killbox" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killbox"]
position = Vector2(7, 36)
shape = SubResource("RectangleShape2D_y3m7w")

[node name="SelfDestructTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="body_entered" from="TriggerArea" to="." method="_on_trigger_area_body_entered"]
[connection signal="body_entered" from="Killbox" to="." method="_on_killbox_body_entered"]
[connection signal="timeout" from="SelfDestructTimer" to="." method="_on_self_destruct_timer_timeout"]
